# SRE-Incident-Response-Simulator

./: .gitignore  Dockerfile  LICENSE  README.md  __init__.py  baseline.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  validate-submission.sh
server/: __init__.py  agents.py  app.py  environment.py  incidents.py
